--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tailwindcss": "^1.4.4"
   },
   "scripts": {
     "api": "json-server data.json --watch --port 3005",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/cli": "^5.4.0",
     "concurrently": "^5.2.0",
     "json-server": "^0.16.1"
   }
