--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
     "concurrently": "^5.2.0",
+    "file-loader": "^6.0.0",
     "json-server": "^0.16.1"
   }
 }
